[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.32"
yew = { version = "0.23.0", features = ["csr"] }
wasm-bindgen = "0.2.123"
wasm-bindgen-futures = "0.4.73"
gloo = "0.12.0"
js-sys = "0.3.100"

[dependencies.web-sys]
version = "0.3.100"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Event',
  'EventTarget',
  'Window',
]
